[gd_scene load_steps=34 format=3 uid="uid://wp7styrjr6eh"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_mxh4d"]
[ext_resource type="Texture2D" uid="uid://cypp1sy3t8esr" path="res://assets/art/player/Submarine (Right) - Endless Depth/submarine_right_00.png" id="2_4iguf"]
[ext_resource type="Texture2D" uid="uid://byg1d6lr2jcd7" path="res://assets/art/player/Submarine (game-over) - Endless Depth/submarine_game_over_00.png" id="2_87xop"]
[ext_resource type="Texture2D" uid="uid://cxfjthmpqu02t" path="res://assets/art/player/Submarine (game-over) - Endless Depth/submarine_game_over_01.png" id="3_dmjhu"]
[ext_resource type="Texture2D" uid="uid://bhqlx0jj5xikj" path="res://assets/art/player/Submarine (Right) - Endless Depth/submarine_right_01.png" id="3_mv7dg"]
[ext_resource type="Texture2D" uid="uid://baiumg0i6fux6" path="res://assets/art/player/Submarine (game-over) - Endless Depth/submarine_game_over_02.png" id="4_7nvsd"]
[ext_resource type="Texture2D" uid="uid://bv32ybts3lco" path="res://assets/art/player/Submarine (Right) - Endless Depth/submarine_right_02.png" id="4_dnoew"]
[ext_resource type="Texture2D" uid="uid://mfuc0f8f5jdk" path="res://assets/art/player/Submarine (Right) - Endless Depth/submarine_right_03.png" id="5_2n5il"]
[ext_resource type="Texture2D" uid="uid://br14r6wq840p0" path="res://assets/art/player/Submarine (game-over) - Endless Depth/submarine_game_over_03.png" id="5_luloo"]
[ext_resource type="Texture2D" uid="uid://6r0gpses7it1" path="res://assets/art/player/Submarine (game-over) - Endless Depth/submarine_game_over_04.png" id="6_c7ogm"]
[ext_resource type="Texture2D" uid="uid://c521g7sb36ona" path="res://assets/art/player/Submarine (Right) - Endless Depth/submarine_right_04.png" id="6_ecugp"]
[ext_resource type="Texture2D" uid="uid://ba6jfr0cxgv73" path="res://assets/art/player/Submarine (Right) - Endless Depth/submarine_right_05.png" id="7_04fuo"]
[ext_resource type="Texture2D" uid="uid://bpnddhh8lvwnc" path="res://assets/art/player/Submarine (game-over) - Endless Depth/submarine_game_over_05.png" id="7_s7of8"]
[ext_resource type="Texture2D" uid="uid://dmw0bcn4xqfeq" path="res://assets/art/player/Submarine (game-over) - Endless Depth/submarine_game_over_06.png" id="8_1b0b1"]
[ext_resource type="Texture2D" uid="uid://dwlhcstfu7sgv" path="res://assets/art/player/Submarine (Right) - Endless Depth/submarine_right_06.png" id="8_oo5ru"]
[ext_resource type="Texture2D" uid="uid://g1fo40ubxspt" path="res://assets/art/player/Submarine (Right) - Endless Depth/submarine_right_07.png" id="9_0tswa"]
[ext_resource type="Texture2D" uid="uid://bvyd1cki52nae" path="res://assets/art/player/Submarine (game-over) - Endless Depth/submarine_game_over_07.png" id="9_43dlv"]
[ext_resource type="Texture2D" uid="uid://dxh1p0xcka8kt" path="res://assets/art/player/Submarine (Right) - Endless Depth/submarine_right_08.png" id="10_hmx0n"]
[ext_resource type="Texture2D" uid="uid://c5cg7dbeg8flx" path="res://assets/art/player/Submarine (game-over) - Endless Depth/submarine_game_over_08.png" id="10_wts2d"]
[ext_resource type="Texture2D" uid="uid://cr2kfxbptxovf" path="res://assets/art/player/Submarine (Right) - Endless Depth/submarine_right_09.png" id="11_2rm5p"]
[ext_resource type="Texture2D" uid="uid://b5wfr5uk67u5c" path="res://assets/art/player/Submarine (game-over) - Endless Depth/submarine_game_over_09.png" id="11_8t1rk"]
[ext_resource type="Texture2D" uid="uid://dd36hl16cm0wr" path="res://assets/art/player/Submarine (Right) - Endless Depth/submarine_right_10.png" id="12_0x0uo"]
[ext_resource type="Texture2D" uid="uid://clshyun24w1vl" path="res://assets/art/player/Submarine (game-over) - Endless Depth/submarine_game_over_10.png" id="12_oiv6g"]
[ext_resource type="Texture2D" uid="uid://bukwioksotqqk" path="res://assets/art/player/Submarine (game-over) - Endless Depth/submarine_game_over_11.png" id="13_dtfvl"]
[ext_resource type="Texture2D" uid="uid://60q1qy72810e" path="res://assets/art/player/Submarine (Right) - Endless Depth/submarine_right_11.png" id="13_psu53"]
[ext_resource type="Texture2D" uid="uid://cph7gbuxm68ni" path="res://assets/art/player/Submarine (Right) - Endless Depth/submarine_right_12.png" id="14_i68na"]
[ext_resource type="Texture2D" uid="uid://cylm0rbnk34b2" path="res://assets/art/player/Submarine (game-over) - Endless Depth/submarine_game_over_12.png" id="14_vm5b8"]
[ext_resource type="Texture2D" uid="uid://daix5oxvgt07l" path="res://assets/art/player/Submarine (game-over) - Endless Depth/submarine_game_over_13.png" id="15_gdbk4"]
[ext_resource type="Texture2D" uid="uid://b0r2crdj2lmmd" path="res://assets/art/player/Submarine (Right) - Endless Depth/submarine_right_13.png" id="15_kxthb"]
[ext_resource type="Texture2D" uid="uid://bj0xomaxo8mcn" path="res://assets/art/player/Submarine (hit2).png" id="30_p0kt1"]
[ext_resource type="Texture2D" uid="uid://fsl1xjlwvcql" path="res://assets/art/player/Submarine (Hit3).png" id="31_satwg"]
[ext_resource type="Script" path="res://Camera/camera_2d.gd" id="32_bkscu"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ntpu6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_87xop")
}, {
"duration": 1.0,
"texture": ExtResource("3_dmjhu")
}, {
"duration": 1.0,
"texture": ExtResource("4_7nvsd")
}, {
"duration": 1.0,
"texture": ExtResource("5_luloo")
}, {
"duration": 1.0,
"texture": ExtResource("6_c7ogm")
}, {
"duration": 1.0,
"texture": ExtResource("7_s7of8")
}, {
"duration": 1.0,
"texture": ExtResource("8_1b0b1")
}, {
"duration": 1.0,
"texture": ExtResource("9_43dlv")
}, {
"duration": 1.0,
"texture": ExtResource("10_wts2d")
}, {
"duration": 1.0,
"texture": ExtResource("11_8t1rk")
}, {
"duration": 1.0,
"texture": ExtResource("12_oiv6g")
}, {
"duration": 1.0,
"texture": ExtResource("13_dtfvl")
}, {
"duration": 1.0,
"texture": ExtResource("14_vm5b8")
}, {
"duration": 1.0,
"texture": ExtResource("15_gdbk4")
}],
"loop": true,
"name": &"sink",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("30_p0kt1")
}, {
"duration": 1.0,
"texture": ExtResource("31_satwg")
}],
"loop": true,
"name": &"slow_hit",
"speed": 1.2
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_4iguf")
}, {
"duration": 1.0,
"texture": ExtResource("3_mv7dg")
}, {
"duration": 1.0,
"texture": ExtResource("4_dnoew")
}, {
"duration": 1.0,
"texture": ExtResource("5_2n5il")
}, {
"duration": 1.0,
"texture": ExtResource("6_ecugp")
}, {
"duration": 1.0,
"texture": ExtResource("7_04fuo")
}, {
"duration": 1.0,
"texture": ExtResource("8_oo5ru")
}, {
"duration": 1.0,
"texture": ExtResource("9_0tswa")
}, {
"duration": 1.0,
"texture": ExtResource("10_hmx0n")
}, {
"duration": 1.0,
"texture": ExtResource("11_2rm5p")
}, {
"duration": 1.0,
"texture": ExtResource("12_0x0uo")
}, {
"duration": 1.0,
"texture": ExtResource("13_psu53")
}, {
"duration": 1.0,
"texture": ExtResource("14_i68na")
}, {
"duration": 1.0,
"texture": ExtResource("15_kxthb")
}],
"loop": true,
"name": &"submarine",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("30_p0kt1")
}, {
"duration": 1.0,
"texture": ExtResource("31_satwg")
}],
"loop": true,
"name": &"submarine_hit",
"speed": 12.0
}]

[node name="Player" type="Area2D"]
position = Vector2(240, 376)
script = ExtResource("1_mxh4d")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ntpu6")
animation = &"submarine"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-30, 12, -26, 12, -24, 12, -9, 22, 14, 22, 30, 11, 30, 4, 18, -4, 18, -24, 10, -24, 10, -6, -10, -6, -24, 4, -26, 4, -30, 4)

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 2.5
script = ExtResource("32_bkscu")

[node name="WaitTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
